# arch_install

./: .gitignore  README.md  pyproject.toml
arch_install/: __init__.py  gnome.py  install_uefi.py
