[tool.poetry]
name = "archinstall"
version = "0.1.0"
description = ""
authors = ["silverash125lv <silverash125lv@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
PyYAML = "^5.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
